[package]
name = "pms700x"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
exclude = ["*.pdf"]
license = "MIT OR Apache-2.0"
description = "Embeded-hal implementation for the PMS700x family of sensors"
readme = "README.md"
repository = "https://github.com/icewind1991/pms700x"
documentation = "https://docs.rs/pms700x"

[dependencies]
embedded-hal = "0.2"
nb = "1.0"

[dev-dependencies]
linux-embedded-hal = "0.3"
